--- a/package.json
+++ b/package.json
@@ -23,21 +23,18 @@
     "jsx-loader": "^0.12.2",
     "mocha": "^2.1.0",
     "should": "^5.0.0",
-    "style-loader": "^0.8.2",
-    "stylus-loader": "^0.4.0",
     "webpack": "^1.4.13",
     "webpack-dev-server": "^1.6.6"
   },
   "dependencies": {
     "has-touch": "^1.0.1",
-    "moment": "^2.8.0",
     "object-assign": "^2.0.0",
     "parse-time": "^0.1.1",
-    "react": "^0.12.2",
     "react-event-names": "^1.0.0",
-    "react-field-component-utils": "radubrehar/react-field-component-utils",
-    "react-input-field": "^1.1.6",
-    "react-style-normalizer": "^1.1.3"
+    "react-style-normalizer": "^1.2.0"
+  },
+  "peerDependencies": {
+    "react": ">=0.12.0"
   },
   "repository": {
     "type": "git",
