update author in package.json

--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "react",
     "react-component"
   ],
-  "author": "Zippy Technologies",
+  "author": "ZippyUI <contact@zippyui.com>",
   "contributors": [
     "Radu Brehar <radu@evanghelic.ro>"
   ],
